fix social icons visibility on desktop

--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,7 @@ footer{
 .redes-sociales img{
     width: 4em;
     margin: 1em;
+    filter: drop-shadow(0px 0px 5px #5ca3ffae);
 
 }
 
@@ -158,7 +159,8 @@ footer{
         transform: scale(1.1);
         filter: brightness(140%);
         position: relative;
-        filter: drop-shadow(10px 10px 10px #5ca3ffb9);
+        filter: drop-shadow(0px 0px 10px #5ca3ffb2);
+
     }
     
     .hover-text {
@@ -183,7 +185,7 @@ footer{
         visibility: visible;
     }
     .redes-sociales img:hover{
-        filter: drop-shadow(0px 0px 6px #5a95e373);
+        filter: drop-shadow(0px 0px 6px var(--color-2));
         scale: 1.2;
     }
 
